# optimization

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  check-criteria.sh  install.sh  pyproject.toml  requirements-research.txt  settings.json  setup.sh
.claude/: AGENTS.md  check-criteria.sh  common-criteria.sh  project-criteria.sh  settings.json  skill-catalog.md
.claude/docs/: README.md  agents.md  claude-md.md  criteria-pattern.md  memory.md  omc.md  onboarding.md  skill.md  team-operations.md
.claude/output-styles/: data-driven-minds.md
.claude/rules/: api.md  cli.md  config.md  docker.md  documentation.md  migrations.md  python-backend.md  security.md
.claude/tests/: type_error_fixture.py
.omc/: notepad.md  project-memory.json
.omc/plans/: claude-code-reference-docs.md  general-rules-toolkit-v2.md  general-rules-toolkit-v3.md
.omc/research/: criteria-codex.md
.omc/sessions/: 68d50f9c-7dc3-4945-b3e2-b9ded5b91b4d.json  8396698f-7326-4fff-9af1-ab1248a0d560.json  95935580-76df-4178-a11b-85aefd8048eb.json  f26f6563-9f4e-4471-92d6-1bcd1a656b82.json  fa61f0e0-5992-4eb3-a4b9-ac5cc63c170c.json
.omc/specs/: deep-interview-design-philosophy.md
.omc/state/: hud-state.json  hud-stdin-cache.json  last-tool-error.json
claude-config/: .env.example  CLAUDE.md  README.md  how_to_subtree_in_git.md
claude-config/.claude/: check-criteria.sh  setup.sh  skill-catalog.md
claude-config/.github/: pull_request_template.md
claude-config/.omc/: prd.json
configs/: base_config.yaml  eta_params.yaml  shaw_params.yaml
docs/: glossary.md  hooks-guide-ko.md  naming-conventions.md  omc-workflows-ko.md  omc.md  setup.md  team-operations-guide.md  team-operations.md
docs/adr/: ADR-001-eta-distribution-parameters.md  ADR-002-shaw-lambda-empirical-fitting.md  ADR-003-objective-strategy-protocol.md  ADR-003-skill-9category-structure.md  ADR-004-libs-optimization-package.md  ADR-005-real-data-backtester.md  ADR-006-objective-function-comparison.md  (+11 more)
libs/: CLAUDE.md  __init__.py
notebooks/: harbor_optimization_analysis.ipynb
results/: backtest_comparison.csv  baseline_kpi.json  benchmark_matrix.csv  bp_algorithm_comparison.csv  feasibility_report.json  full_baseline_kpi.json  full_comparison.csv  full_optimization.json  nm_benchmark_full.csv  objective_comparison.csv  pilot_analysis.json  real_comparison.csv  real_optimization.json  robustness.csv  stochastic_robustness_full.json
rules/: models.md  notebook.md
scripts/: CLAUDE.md  analyze_scheduling_data.py  backtest_comparison.py  benchmark_benders.py  build_full_problem.py  build_real_problem.py  compare_full.py  compare_real_optimization.py  download_papers.py  download_papers_scihub.py  download_worker2.py  evaluate_baseline.py  evaluate_full_baseline.py  fit_eta_parameters.py  fit_shaw_parameters.py  generate_academic_report.py  generate_comprehensive_report.py  generate_deployment_plan.py  generate_dummy_data.py  generate_literature_review.py  generate_pdf_report.py  generate_report.py  harbor_dashboard.py  pilot_analysis.py  plot_before_after.py  run_benchmark_matrix.py  run_bp_comparison.py  run_nm_benchmark_full.py  run_objective_experiment.py  run_robustness.py  run_simulation.py  simulate_feasibility.py  simulate_tug_movement.py  stochastic_robustness_full.py  visualize_routes.py
tests/: CLAUDE.md  test_ais.py  test_backtester.py  test_core.py  test_integration.py  test_multi_tug.py  test_objective.py  test_solver_protocol.py
(+927 files in other folders)
