[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "harbor-optimization"
version = "0.1.0"
description = "Harbor tugboat and vessel schedule/route/fuel optimization"
requires-python = ">=3.11"
readme = "README.md"

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "C4", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["ANN"]
"libs/stochastic/*" = ["ANN"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["scripts/", "docs/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
