[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["libs*"]

[project]
name = "harbor-optimization"
version = "0.1.0"
description = "Harbor tugboat and vessel schedule/route/fuel optimization"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "pyomo>=6.7",
    "highspy>=1.7",
    "numpy>=1.26",
    "scipy>=1.11",
    "cvxpy>=1.4",
    "cyipopt>=0.3",
]

[project.scripts]
benchmark-benders = "scripts.benchmark_benders:main"
run-simulation   = "scripts.run_simulation:main"

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "C4", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["ANN"]
"libs/stochastic/*" = ["ANN"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["scripts/", "docs/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
